# CEval

./: README.md  demo_adult_income.py  pyproject.toml
.github/workflows/: python-publish.yml
CEval/ceval/: __init__.py  wrappers.py
examples/: demo_adult_income.ipynb
